--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>timax.js</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -33,15 +33,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">timaxjsClient</a>
+            <a class="navbar-brand" style="padding-top: 10px;" rel="home" href="#"><img class="img-responsive" src="/images/clock.png" width="30" height="25"></a>
+            <a class="navbar-brand" href="#">timax.js</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="#/">Start</a></li>
+              <li><a ng-href="#/about">Projects</a></li>
+              <li><a ng-href="#/">Bookings</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +55,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from Benjamin Lutz</p>
       </div>
     </div>
 
