--- a/app/index.html
+++ b/app/index.html
@@ -33,16 +33,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" style="padding-top: 10px;" rel="home" href="#"><img class="img-responsive" src="/images/clock.png" width="30" height="25"></a>
-            <a class="navbar-brand" href="#">timax.js</a>
+            <a class="navbar-brand" style="padding-top: 10px;" rel="home" ng-href="#/"><img class="img-responsive" src="/images/clock.png" width="30" height="25"></a>
+            <a class="navbar-brand" ng-href="#/">timax.js</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Start</a></li>
-              <li><a ng-href="#/about">Projects</a></li>
-              <li><a ng-href="#/">Bookings</a></li>
+              <li><a ng-href="#/">Start</a></li>
+              <li><a ng-href="#/projects">Projects</a></li>
+              <li><a ng-href="#/bookings">Bookings</a></li>
             </ul>
           </div>
         </div>
