--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,10 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li><a ng-href="#/">Start</a></li>
-              <li><a ng-href="#/projects">Projects</a></li>
-              <li><a ng-href="#/bookings">Bookings</a></li>
+            <ul class="nav navbar-nav" ng-controller="NavigationCtrl">
+              <li ng-class="{ active: isActive('/')}"><a ng-href="#/">Start</a></li>
+              <li ng-class="{ active: isActive('/projects')}"><a ng-href="#/projects">Projects</a></li>
+              <li ng-class="{ active: isActive('/bookings')}"><a ng-href="#/bookings">Bookings</a></li>
             </ul>
           </div>
         </div>
@@ -78,6 +78,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/navigation.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/identityprovider.js"></script>
