--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/services/identityprovider.js"></script>
+        <script src="scripts/controllers/start.controller.js"></script>
+        <script src="scripts/controllers/modals/login.controller.js"></script>
+        <script src="scripts/services/identityProvider.service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
