--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
+    <script src="bower_components/angular-jwt/dist/angular-jwt.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -75,8 +76,10 @@
         <script src="scripts/config.js"></script>
         <script src="scripts/controllers/start.controller.js"></script>
         <script src="scripts/controllers/modals/login.controller.js"></script>
+        <script src="scripts/controllers/project.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
+        <script src="scripts/services/authorisation.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
         <!-- endbuild -->
