login and logout

--- a/app/index.html
+++ b/app/index.html
@@ -37,9 +37,7 @@
             <a class="navbar-brand" ng-href="#/">timax.js</a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-            <navigation></navigation>
-          </div>
+          <navigation></navigation>
         </div>
       </div>
     </div>
@@ -75,8 +73,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/config.js"></script>
         <script src="scripts/controllers/start.controller.js"></script>
+        <script src="scripts/controllers/logout.controller.js"></script>
         <script src="scripts/controllers/modals/login.controller.js"></script>
         <script src="scripts/controllers/project.controller.js"></script>
+        <script src="scripts/controllers/booking.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
         <script src="scripts/services/authorisation.service.js"></script>
