added project list with action buttons

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/services/identityProvider.service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
         <script src="scripts/services/authorisation.service.js"></script>
+        <script src="scripts/services/project.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
         <!-- endbuild -->
