--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/controllers/start.controller.js"></script>
         <script src="scripts/controllers/logout.controller.js"></script>
         <script src="scripts/controllers/modals/login.controller.js"></script>
+        <script src="scripts/controllers/modals/error.controller.js"></script>
         <script src="scripts/controllers/project.controller.js"></script>
         <script src="scripts/controllers/booking.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
@@ -83,6 +84,7 @@
         <script src="scripts/services/project.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
+        <script src="scripts/interceptors/httpError.interceptor.js"></script>
         <!-- endbuild -->
 </body>
 </html>
