--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/controllers/logout.controller.js"></script>
         <script src="scripts/controllers/modals/login.controller.js"></script>
         <script src="scripts/controllers/modals/error.controller.js"></script>
+        <script src="scripts/controllers/modals/manageUser.controller.js"></script>
         <script src="scripts/controllers/project.controller.js"></script>
         <script src="scripts/controllers/booking.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
