--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/services/authorisation.service.js"></script>
         <script src="scripts/services/project.service.js"></script>
         <script src="scripts/services/user.service.js"></script>
+        <script src="scripts/services/booking.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
         <script src="scripts/interceptors/httpError.interceptor.js"></script>
