show paginated list of bookings

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <script src="scripts/services/user.service.js"></script>
         <script src="scripts/services/booking.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
+        <script src="scripts/filters/asDate.filter.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
         <script src="scripts/interceptors/httpError.interceptor.js"></script>
         <!-- endbuild -->
