refactored booking controller

--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/services/project.service.js"></script>
         <script src="scripts/services/user.service.js"></script>
         <script src="scripts/services/booking.service.js"></script>
+        <script src="scripts/services/pagination.service.js"></script>
         <script src="scripts/directives/navigation.directive.js"></script>
         <script src="scripts/filters/asDate.filter.js"></script>
         <script src="scripts/interceptors/authToken.interceptor.js"></script>
