basic user view and correct permissions in every screen

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/controllers/modals/manageUser.controller.js"></script>
         <script src="scripts/controllers/project.controller.js"></script>
         <script src="scripts/controllers/booking.controller.js"></script>
+        <script src="scripts/controllers/user.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
         <script src="scripts/services/authorisation.service.js"></script>
