confirmation dialog before delete

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/controllers/modals/login.controller.js"></script>
         <script src="scripts/controllers/modals/error.controller.js"></script>
         <script src="scripts/controllers/modals/manageUser.controller.js"></script>
+        <script src="scripts/controllers/modals/confirmation.controller.js"></script>
         <script src="scripts/controllers/project.controller.js"></script>
         <script src="scripts/controllers/booking.controller.js"></script>
         <script src="scripts/controllers/user.controller.js"></script>
