refactored out socket service

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <script src="scripts/controllers/booking.controller.js"></script>
         <script src="scripts/controllers/user.controller.js"></script>
         <script src="scripts/services/identityProvider.service.js"></script>
+        <script src="scripts/services/socket.Service.js"></script>
         <script src="scripts/services/routeNavigation.service.js"></script>
         <script src="scripts/services/authorisation.service.js"></script>
         <script src="scripts/services/project.service.js"></script>
