fix socket-io wiredep that it still will work in dist version

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" style="padding-top: 10px;" rel="home" ng-href="#/"><img class="img-responsive" src="/images/clock.png" width="30" height="25"></a>
+            <a class="navbar-brand" style="padding-top: 10px;" rel="home" ng-href="#/"><img class="img-responsive" src="images/clock.png" width="30" height="25"></a>
             <a class="navbar-brand" ng-href="#/">timax.js</a>
           </div>
 
@@ -54,8 +54,6 @@
       </div>
     </div>
 
-    <script src="bower_components/socket.io-client/socket.io.js"></script>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -71,6 +69,7 @@
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="bower_components/angular-jwt/dist/angular-jwt.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/socket.io-client/socket.io.js"></script>
     <script src="bower_components/angular-socket-io/socket.js"></script>
     <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <!-- endbower -->
